# swarm-game

./: .gitignore  LICENSE  MANIFEST.in  README.rst  Swarm.py  aiTest.py  caravan.py  globals.py  laser.py  main.py  particle.py  planet.py  player.py  pointer.py  setup.cfg  utilities.py  wall.py
images/: PointerDev.xcf
swarmgame/: aiTest.py  caravan.py  globals.py  laser.py  particle.py  planet.py  player.py  pointer.py  swarm.py  utilities.py  wall.py
