[metadata]
name = swarm-game
version = 0.1
description = Take over planets, expand your empire
long_description = file: README.rst
url = https://github.com/nickwulf/swarm-game
author = Nicholas Wulf
author_email = nickwulf1@gmail.com
license = Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
   pygame >= 2.4
   numpy >= 1.21.6